update source code

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <span>(Bài này e đề cho chưa cụ thể nên e xin phép tự cho con số và làm bài)</span>
                     </h2>
                     <div class="right_name d-flex p-4 align-items-center">
-                        <i class="fa-solid fa-sack-dollar"></i>
-                        <p>VD:Điểm trúng tuyển  >= 5 là đậu, lưu ý nếu 1 trong 3 môn có điểm 0 thì sẽ bị điểm liệt(tức không đâu) </p>
+                        <i class="fa-solid fa-calculator"></i>                       
+                        <p>VD: Điểm trúng tuyển  >= 5 là đậu, lưu ý nếu 1 trong 3 môn có điểm 0 thì sẽ bị điểm liệt(tức không đâu) </p>
                     </div>
                     <div class="right_card" >
                         <div class="bt_1 text-center">
@@ -80,24 +80,24 @@
                                     class="bt1_input form-control" name="" id="diemToan" aria-describedby="" placeholder="VD: 10" style="width: 80%;">
                                 </div>
                                 <div class="mb-3 col-4">
-                                    <label for="" class=" form-label py-2">-Điểm Lý</label>
+                                    <label for="" class=" form-label py-2">-Điểm Lý-</label>
                                     <input type="text"
                                       class="bt1_input form-control" name="" id="diemLy" aria-describedby="" placeholder="VD: 10" style="width: 80%;">
                                   </div>
                                 <div class="mb-3 col-4">
-                                    <label for="" class=" form-label py-2">-Điểm Hoá</label>
+                                    <label for="" class=" form-label py-2">-Điểm Hoá-</label>
                                     <input type="text"
                                       class="bt1_input form-control" name="" id="diemHoa" aria-describedby="" placeholder="VD: 10" style="width: 80%;">
                                 </div>
                             </div>
                             <div class="py-3">
-                                <select  name="" id="khuVuc" style="width: 85%;">
+                                <select  name="" id="khuVuc" style="width: 55%;">
                                     <option value="" id="">Bạn thuộc khu vực ưu tiên nào?</option>
                                     <option value="A">A</option>
                                     <option value="B">B</option>
                                     <option value="C">C</option>
                                 </select>
-                                <select class="my-3" name="" id="doiTuong" style="width: 85%;">
+                                <select class="my-3" name="" id="doiTuong" style="width: 55%;">
                                     <option value="">Bạn thuộc đối tượng ưu tiên nào?</option>
                                     <option value="1">2.5</option>
                                     <option value="2">1.5</option>
@@ -153,7 +153,7 @@
                         <i class="fa-solid fa-book"></i>
                         Bài 4</button></a>
 
-                </div>
+                </div>  
                 <div class="dom_right">
                     <h2 class="bt1_h2 text-center py-3">Bài 2  Bài tập tính tiền điện: Viết chương trình nhập vào thông tin tiêu thụ điện (tên,số KM)</h2>
                     <div class="right_name d-flex p-5 align-items-center">
@@ -167,17 +167,17 @@
                     </div>
                     <div class="right_card ">
                         <div class="bt_2  text-center">
-                            <div class="d-flex ">
+                            <div class="">
                                 <div class="mb-3">
                                     <div class="mb-3 m-auto">
                                         <label for="" class="form-label">Nhập tên chủ hộ</label>
                                         <input type="text"
-                                          class="form-control" name="" id="tenKhachHang" aria-describedby="helpId" placeholder="Vd: 1">
+                                          class="form-control" name="" id="tenKhachHang" aria-describedby="helpId" placeholder="Nguyễn Văn A" style="width: 50%;">
                                       </div>
                                     <div class="mb-3 ">
                                           <label for="" class="form-label"> Tổng điện năng tiêu thụ</label>
                                           <input type="text"
-                                            class="form-control" name="" id="soKWh" aria-describedby="helpId" placeholder="Vd: 2">
+                                            class="form-control" name="" id="soKWh" aria-describedby="helpId" placeholder="100kw" style="width: 50%;">
                                         </div>
                                 
                                 </div>
@@ -250,17 +250,17 @@
                                 <div class="mb-3">
                                     <label for="" class="form-label">Họ và Tên</label>
                                     <input type="text"
-                                      class="form-control" name="" id="hoVaTen" aria-describedby="helpId" placeholder="VD: 100">
+                                      class="form-control" name="" id="hoVaTen" aria-describedby="helpId" placeholder="VD: Nguyễn Văn A">
                                 </div>
                                 <div class="mb-3">
                                     <label for="" class="form-label">Tổng thu nhập (triệu VND)</label>
                                     <input type="text"
-                                      class="form-control" name="" id="tongThuNhap" aria-describedby="helpId" placeholder="VD: 100">
+                                      class="form-control" name="" id="tongThuNhap" aria-describedby="helpId" placeholder="VD: 100 triệu">
                                 </div>
                                 <div class="mb-3">
                                     <label for="" class="form-label">Số người phụ thuộc</label>
                                     <input type="text"
-                                      class="form-control" name="" id="soNguoiPhuThuoc" aria-describedby="helpId" placeholder="VD: 100">
+                                      class="form-control" name="" id="soNguoiPhuThuoc" aria-describedby="helpId" placeholder="VD: 2 người">
                                 </div>
                             </div>
                             <button class="bt1_button" id="tinhThueButton" >Tính thuế</button>
@@ -320,7 +320,7 @@
                 <div class="dom_right">
                     <h2 class="bt1_h2 text-center py-3">Bài 4: Tính tiền cáp</h2>
                     <div class="right_name d-flex p-4 align-items-center">
-                        <i class="fa-solid fa-square"></i>
+                        <i class="fa-solid fa-money-bill-transfer"></i>
                         <p>Viết chương trình tính hoá đơn khách hàng cho 1 công ty cáp. Có 2 loại khách hàng: nhà và doanh nghiệp. Có 2 mức giá tính tiền cáp</p>
                     </div>
                     <div class="right_card">
@@ -329,7 +329,7 @@
                                 <div class="mb-3">
                                     <label for="" class=" form-label py-2">Mã khách hàng</label>
                                     <input type="text"
-                                      class="bt1_input form-control" name="" id="maKhachHang" aria-describedby="helpId" placeholder="" style="width: 60%;">
+                                      class="bt1_input form-control" name="" id="maKhachHang" aria-describedby="helpId" placeholder="Vd: Nguyễn Văn A " style="width: 60%;">
                                   </div>
                                   <select  id="loaiKhachHang" style="width: 60; height: 40px; margin: 0 auto; border-radius: 15px;">
                                     <option value="">Loại khách hàng</option>
@@ -339,12 +339,12 @@
                                   <div class="mb-3">
                                       <label for="" class=" form-label py-2">Số kết nối</label>
                                       <input type="text"
-                                        class="bt1_input form-control" name="" id="soKetNoi" aria-describedby="helpId" placeholder="Vd: 5" style="width: 60%;">
+                                        class="bt1_input form-control" name="" id="soKetNoi" aria-describedby="helpId" placeholder="Vd: 5" style="width: 22%;">
                                   </div>
                                   <div class="mb-3">
                                     <label for="" class=" form-label py-2">Số kênh cao cấp</label>
                                     <input type="text"
-                                      class="bt1_input form-control" name="" id="soKenhCaoCap" aria-describedby="helpId" placeholder="Vd: 5" style="width: 60%;">
+                                      class="bt1_input form-control" name="" id="soKenhCaoCap" aria-describedby="helpId" placeholder="Vd: 5" style="width: 22%;">
                                 </div>
                             </div>
                             <button class="bt1_button" id="tinhHoaDon" >Tính hoá đơn</button>
